[gd_scene load_steps=4 format=3 uid="uid://b145sofr6gp1x"]

[ext_resource type="Script" path="res://Resources/WaterSpring/WaterSpring.gd" id="1_8a6my"]
[ext_resource type="Texture2D" uid="uid://dx5jwi7lpoaqw" path="res://Resources/WaterSpring/SpringMarker.png" id="1_fyb34"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6sn4x"]

[node name="WaterSpring" type="Node2D"]
script = ExtResource("1_8a6my")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_fyb34")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_6sn4x")

[node name="ResetModulationTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="ResetModulationTimer" to="." method="_on_reset_modulation_timer_timeout"]
